@@ -93,9 +93,10 @@
       L538, 32:zitem dx 10 的例子
       L542, 33:R#.24   @leetcode
       L581, 34:R#.25   @一些 game engine 
-     Zndex_E : //z 2015-08-06 09:41:14 L.147'51526 T4277945591.K ~555 +----+----+----+----+----+
-     TimeCnt : //z 2015-08-06 08:25:43 L.147'56057 T2984249626.K ~26  +----+----+----+----+----+
-     Reg.Cnt : //z 2015-08-06 08:25:18 L.147'56082 T2984249532.K ~26  +----+----+----+----+----+
+     Zndex_E : //z 2015-08-13 17:36:39 L.140'23001 T3396814815.K ~590 +----+----+----+----+----+
+     TimeCnt : //z 2015-08-13 17:32:04 L.140'23276 T3396670963.K ~27  +----+----+----+----+----+
+     Reg.Cnt : //z 2015-08-13 17:31:56 L.140'23284 T3396635193.K ~27  +----+----+----+----+----+
+     #27  R+ : //z 2015-08-13 17:31:56 L.140'23284 T3396635193.K ~27    V+.583  L+.642  
      #26  R+ : //z 2015-08-06 08:25:18 L.147'56082 T2984249532.K ~26    V+.573  L+.634  
      #25  R+ : //z 2015-07-21 13:07:21 L.163'39159 T3292602638.K ~25    V+.501  L+.570  
      #24  R+ : //z 2015-07-16 13:06:43 L.168'39197 T1394128213.K ~24    V+.488  L+.528  
@@ -125,7 +126,10 @@
      File.Op : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2   +----+----+----+----+----+
      #2   O+ : //z 2015-08-06 08:25:11 L.147'56089 T2984249525.K ~2     V+.572  L+.1    
      #1   O+ : //z 2015-06-18 08:36:17 L.196'55423 T2695262750.K ~1     V+.374  L+.1    
-     Version : //z 2015-08-06 09:41:14 L.147'51526 T4277945591.K ~581   R+.26   L+.636  --+----+
+     Version : //z 2015-08-13 17:36:39 L.140'23001 T3396814815.K ~617   R+.27   L+.661  --+----+
+     #32  V+ : //z 2015-08-13 17:34:45 L.140'23115 T3396742970.K ~608   R+.27   L+.657  
+     #31  V+ : //z 2015-08-13 17:32:10 L.140'23270 T3396670992.K ~589   R+.27   L+.644  
+     #30  R+ : //z 2015-08-13 17:31:56 L.140'23284 T3396635193.K ~583   R+.27   L+.643  V+.583  
      #30  R+ : //z 2015-08-06 08:25:18 L.147'56082 T2984249532.K ~573   R+.26   L+.635  V+.573  
      #30  V+ : //z 2015-08-04 12:53:59 L.149'39961 T3362029595.K ~570   R+.25   L+.617  
      #29  V+ : //z 2015-07-30 10:32:40 L.154'48440 T1591220938.K ~551   R+.25   L+.612  
@@ -184,7 +188,7 @@
      K   Ter : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      K  Mers : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
      K Kersi : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
-     KVersio : //z 2015-04-27 11:28:04 L.248'45116 T1418964723.K ~0   +----+----+----+----+----+
+     KVersio : //z 2015-08-13 17:33:16 L.140'23204 T3396706935.K ~599   R+.27   L+.649  
      K Versi : //z 2015-07-01 18:10:59 L.183'20941 T981018774 .K ~457   R+.21   L+.495  
      K  Vers : //z 2015-06-04 16:19:53 L.210'27607 T1565149273.K ~347   R+.17   L+.361  
      K   Ver : //z 2015-05-21 18:07:13 L.224'21167 T2791718322.K ~263   R+.14   L+.280  
@@ -635,3 +639,24 @@ https://takinginitiative.wordpress.com/
 01. 座杆 80mm，车把80mm，直径 25.4
 02. 立杆 90mm ，直径 28.6
 #endregion //z 2015-08-06 08:25:18 L.147'56082 BG57IV3@BYH T2984249532.K.F4146951713-+----+----+
+
+#region 08-13 17:31 R#.27   @shader
+//z 2015-08-13 17:32:04 L.140'23276 T3396670963.K[T27,L642,R27,V586]
+01. 
+Shadertoy
+https://www.shadertoy.com/
+只有画布的座标以及一些额外的输入，然后你可用GLSL shader画任何东西。
+windows 下的shader开发环境有 rendermonkey
+
+语言本身其实不难，比如HLSL跟C很像，用不了多久就能学会。难的在于如何写出好Shader，这是图形学的功夫。
+
+建议先跟DirectX或OpenGL的Tutorial走一些例子，摸清楚Pipeline和Shader的工作原理。然后读一些图形学的书，推荐Real Time Rendering，记得出到第三版了。
+
+读了这些书以后大概就懂得如何使用着色器语言写出各种效果了，熟练之后就可以尝试接触一些比较高级的材料，比如最新的DirectX示例，CUDA，从头追看一遍GPU Gem， Shader X系列文章。GPU跟一般的计算机编程还不太一样，理论性很强，想要自己发挥，还是需要有一定基础的。
+
+metaball的cocos2d-x实现：shader实现元球，片段着色器的高效渲染
+http://www.grapecookie.com/code/metaball-cocos2d-shader-cocos2dx/
+其实无非就是不适合CPU去进行的图形运算，交给GPU去做，GPU处理流程中允许程序员控制的只有顶点着色阶段和片段着色阶段，就有了opengl shader里的vsh和fsh，顶点着色器确定要花的东西的形状，形成一个闭合图形，片段着色器则是根据各种参数处理闭合图形内的颜色，亮度、透明度等东西，网上还有其他的类似helloworld例子，都是很好的帮助了解shader的资料，人不可能学会所有东西，不可能把所有程序工具的api记下来，所以要根据需要来，比如现在需要的是2D游戏的渲染，那么只需要搜集2Dshader的资料就可以了，很多大块头的书真正对我们有用的就几十页而已，再比如opengl的很多特性，既可以直接写opengl代码，也可以写shader代码，前者就没必要费时间学习了，直接研究shader如何处理就可以了，shader兼容性更强，很多特性在这个平台上可以使用，在另一个平台上就不能用了，比如把游戏移植到手机，这个时候很多东西只能用shader，shader在opengl和opengl-es都是通用的，而传统opengl函数不可以，带着需求去选择性地学习东西，更事半功倍。
+
+用HLSL，入门推荐《the complete effect and hlsl guide》，高级的看《Shader X》系列吧，另外，Render Monkey是创作shader 的不错工具。
+#endregion //z 2015-08-13 17:31:56 L.140'23284 BG57IV3@XCL T3396635193.K.F4146951713-+----+----+
